# PEPH

./: README.md  pyproject.toml
configs/: ga_spatial_ttt.yml  run1.yml  run_ttt.yml  sim1.yml
data/: simulated_seer_crc.csv
doc/: artifacts.Rmd  config_reference.md  dev_issues.Rmd  developer_guide.md  model.md  peph_config_template.yml  peph_spatial_config_template.yml  spatial_model.md  usage_guide.Rmd
scripts/: check_long_event_structure.py  check_morans_i_frailty.py  generate_ga_spatial_ttt_dataset.py  generate_joint_ttt_survival_dataset.py  run_model_sanity_checks.py  run_treatment_fit.py  run_ttt_counterfactual_reference.py  run_ttt_delay_contrast_reference.py  sim_gamma_recovery.py  simulate_seer_crc_spatial_ttt.py  validate_ttt_long_expansion.py  write_long_from_wide.py
tests/: test_bootstrap_predict_risk.py  test_config_validation.yml  test_design_ttt.py  test_fit_dispatch_ttt.py  test_fit_peph_accepts_x_td_numeric.py  test_fitted_model_load_backward_compatible_without_x_td_numeric.py  test_json_roudtrip.py  test_leroux_centering.py  test_leroux_integration.py  test_leroux_objective_finite.py  test_loglik_matches_statsmodels.py  test_long_expand.py  test_metrics_sensitive_to_frailty.py  test_model_artifact_roundtrip.py  test_morans_I_sanity.py  test_parameter_recovery_slow.py  test_pipeline_simulation_leroux_slow.py  test_pipeline_simulation_ph_slow.py  test_pipeline_smoke_leroux.py  test_pipeline_smoke_leroux_pr9.py  test_pipeline_treatment_integration.py  test_pipeline_ttt_prediction.py  test_pipeline_ttt_prediction_spatial_smoke.py  test_predict_ttt.py  (+30 more)
(+116 files in other folders)
